footer spacing fixed

--- a/to-do-List-Project/src/App.css
+++ b/to-do-List-Project/src/App.css
@@ -153,9 +153,9 @@ li {
   margin: 5% auto;
   gap: 20px;
 }
-input[type="checkbox"] {
-  /* float: left; */
-}
+/* input[type="checkbox"] {
+  float: left;
+} */
 .buttonRandE {
   float: right;
 }
@@ -182,8 +182,10 @@ input[type="checkbox"] {
   /* text-align: center; */
   padding: 20px;
   display: flex;
+  gap: 10px;
   position: relative;
   bottom: 0;
+  justify-content: space-between;
 }
 
 .footer-section {
